# crafthackP3

./: .gitignore  README.md
DesktopApp/: '  CMakeLists.txt
DesktopApp/gui/: listitem.ui  mainwindow.ui
DesktopApp/include/: ImageWidget.h  ListItem.h  ListWidget.h  mainwindow.h
DesktopApp/resources/fonts/: fonts.qrc
DesktopApp/resources/icons/: icons.qrc
DesktopApp/resources/styles/: MyTheme.qss  styles.qrc
DesktopApp/source/: ImageWidget.cc  ListItem.cc  ListWidget.cc  main.cc  mainwindow.cc
